tests/ui/restrictions/mut-restriction.stderr
error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:11:5
   |
LL |     foo.alpha = 1;
   |     ^^^^^^^^^^^^^
   |
note: mutability restricted here
  --> $DIR/mut-restriction.rs:6:13
   |
LL |         pub mut(self) alpha: u8,
   |             ^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:17:9
   |
LL |         (*foo).alpha = 1;
   |         ^^^^^^^^^^^^^^^^
   |
note: mutability restricted here
  --> $DIR/mut-restriction.rs:6:13
   |
LL |         pub mut(self) alpha: u8,
   |             ^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:23:5
   |
LL |     foo.alpha = 1;
   |     ^^^^^^^^^^^^^
   |
note: mutability restricted here
  --> $DIR/mut-restriction.rs:6:13
   |
LL |         pub mut(self) alpha: u8,
   |             ^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:24:5
   |
LL |     std::ptr::addr_of_mut!(foo.alpha);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: mutability restricted here
  --> $DIR/mut-restriction.rs:6:13
   |
LL |         pub mut(self) alpha: u8,
   |             ^^^^^^^^^
   = note: this error originates in the macro `std::ptr::addr_of_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:26:18
   |
LL |     let _alpha = &mut foo.alpha;
   |                  ^^^^^^^^^^^^^^
   |
note: mutability restricted here
  --> $DIR/mut-restriction.rs:6:13
   |
LL |         pub mut(self) alpha: u8,
   |             ^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:29:9
   |
LL |         foo.alpha = 1;
   |         ^^^^^^^^^^^^^
   |
note: mutability restricted here
  --> $DIR/mut-restriction.rs:6:13
   |
LL |         pub mut(self) alpha: u8,
   |             ^^^^^^^^^

error: aborting due to 6 previous errors

